# StudiesSchedule

./: .gitignore  README.md  StudiesSchedule.sln  build.cmd  meson.build
StudiesSchedule/: StudiesSchedule.vcxproj  StudiesSchedule.vcxproj.filters
StudiesScheduleTests/: StudiesScheduleTests.vcxproj  StudiesScheduleTests.vcxproj.filters
solve-graph/: solve_graph_adaptor.cpp  test_solve_graph_adaptor.cpp
src/: assignments.hpp  config.cpp  config.hpp  csv.cpp  csv.hpp  error_fwd.hpp  file_operations_fwd.hpp  file_to_string.cpp  file_to_string.hpp  graph_coloring.cpp  graph_coloring.hpp  indexed_storage.hpp  input.cpp  input.hpp  input_data_model.hpp  log.cpp  log.hpp  main.cpp  meson.build  output.cpp  output.hpp  output_data_model.hpp  prepare_schedule.cpp  prepare_schedule.hpp  schedule.hpp  separate_assignments.cpp  separate_assignments.hpp  solve.cpp  solve.hpp  solve_graph_adaptor.cpp  solve_graph_adaptor.hpp  string_operations.hpp  string_operations_fwd.hpp  string_to_file.cpp  string_to_file.hpp  task.cpp  task.hpp  time_slots.hpp
subprojects/: doctest.wrap
tests/: log_test_implementation.cpp  meson.build  test_config.cpp  test_csv.cpp  test_graph_coloring.cpp  test_input.cpp  test_main.cpp  test_output.cpp  test_prepare_schedule.cpp  test_separate_assignments.cpp  test_solve.cpp  test_solve_graph_adaptor.cpp  test_string_operations.cpp  test_task.cpp
